2005-06-10  Daniel Jacobowitz  <dan@codesourcery.com>

	* elfcode.h (elf_write_relocs): Do nothing if there are no
	relocations.

2005-06-10  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2.c (decode_line_info): Revert last change.  Instead set
	initial low_pc to -1 to avoid need to test whether loc_pc has
	been set.

2005-06-09  Christopher Faylor  <cgf@timesys.com>

	* coffcode.h (sec_to_styp_flags): Set appropriate section flags when
	either SEC_ALLOC OR SEC_LOAD.

2005-06-09  Christopher Faylor  <cgf@timesys.com>

	* coffcode.h (sec_to_styp_flags): Remove read/write flags from noload
	section header.  Do not add STYP_NOLOAD since it does not appear to be
	a valid PE flag.

2005-06-09  H.J. Lu  <hongjiu.lu@intel.com>

	PR 1000
	* dwarf2.c (lookup_address_in_line_info_table): Restore code
	handling NULL function info, removed with 2005-04-03 change.

2005-06-08  Mark Mitchell  <mark@codesourcery.com>

	* opncls.c (bfd_fopen): Mark returned BFD as cacheable if FD == -1.

2005-06-09  Alan Modra  <amodra@bigpond.net.au>

	* elflink.c (elf_mark_used_section): Delete.
	(bfd_elf_gc_sections): Call bfd_generic_gc_sections.
	* reloc.c (bfd_mark_used_section): New function.
	(bfd_generic_gc_sections): Call bfd_mark_used_section.

2005-06-08  Alan Modra  <amodra@bigpond.net.au>

	* opncls.c (bfd_fopen): Don't set bfd_error unconditionally.
	(bfd_fdopenr): Same.

2005-06-07  Mark Mitchell  <mark@codesourcery.com>

	* opncls.c (bfd_fdopenr): Add missing break statements.

2005-06-07  Mark Mitchell  <mark@codesourcery.com>

	* opncls.c (bfd_fopen): New API.
	(bfd_openr): Use it.
	(bfd_fdopenr): Likewise.
	* bfd-in2.h: Regenerated.

2005-06-07  Aldy Hernandez  <aldyh@redhat.com>
	    Michael Snyder  <msnyder@redhat.com>
	    Stan Cox  <scox@redhat.com>

	* Makefile.am (ALL_MACHINES): Add ms1 support.
	(ALL_MACHINES_CFILES): Same.
	(BFD32_BACKENDS): Same.
	(BFD32_BACKENDS_CFILES): Same.

	* Makefile.in: Regenerate.

	* archures.c (bfd_architecture): Add ms1 entries.