@@ -1,3 +1,10 @@
+2005-06-14  Jakub Jelinek  <jakub@redhat.com>
+
+	* elf.c (bfd_section_from_shdr): Fail if name is NULL.
+	Prevent endless recursion on broken objects.
+
+	* archive.c (do_slurp_coff_armap): Check for overflows.
+
 2005-06-10  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* elfcode.h (elf_write_relocs): Do nothing if there are no
